Update index.html to include a comment explaining the Document Type Declaration

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> //it stands for Document Type Declaration
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
