Fix asset paths and add GitHub Pages deployment workflow

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html> //it stands for Document Type Declaration
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pixel Drawing Canvas</title>
-    <link rel="stylesheet" href="/Users/atisha/Documents/pixel-drawing-canvas/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="app">
@@ -49,7 +49,7 @@
         <div id="grid" class="grid"></div>
       </section>
     </main>
-    <script src="/Users/atisha/Documents/pixel-drawing-canvas/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
 
